--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react-redux": "^8.0.5",
     "axios": "^1.3.3",
     "@reduxjs/toolkit": "^1.9.2",
-    "history": "^5.3.0"
+    "history": "^5.3.0",
+    "@hookform/resolvers": "^2.9.11",
+    "joi": "^17.8.1",
+    "react-hook-form": "^7.43.1"
+
   },
   "scripts": {
     "start": "react-scripts start",
